# finalsurge2intervals

./: .gitignore  README.md  main.py  pyproject.toml  sample.config.yaml  sync.py
api/: __init__.py  finalsurge.py  intervals.py
